--- a/src/components/Image.css
+++ b/src/components/Image.css
@@ -6,6 +6,7 @@
 }
 .row {
   display: flex;
+  justify-content: center;
   margin: -1.2%;
 }
 .container {
@@ -19,12 +20,19 @@
 }
 
 .content .content-overlay {
-  background: rgba(235, 80, 59, 0.7);
+  background: linear-gradient(
+      to top,
+      transparent 0%,
+      rgba(235, 80, 59, 0.7) 50%
+    ),
+    linear-gradient(to bottom, transparent 0%, rgba(235, 80, 59, 0.7) 50%);
+  background-position: top, bottom;
+  background-size: 100% 50%;
   position: absolute;
   height: 98%;
   width: 100%;
   opacity: 0;
-  transition: all 0.4s ease-in-out 0s;
+  transition: all 0.9s ease-in-out 0s;
 }
 
 .content:hover .content-overlay {
@@ -33,6 +41,7 @@
 
 .content-image {
   width: 100%;
+  height: 140px;
 }
 
 .content-details {
@@ -76,4 +85,54 @@
 
 .fadeIn-top {
   top: 20%;
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    width: 16%;
+    /* margin: 0 0.3% -0.9%; */
+  }
+  .content-details h3 {
+    font-size: small;
+  }
+  .content-text1 {
+    margin-top: -20%;
+  }
+  .content-text2 {
+    margin-bottom: -20%;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .container {
+    width: 16%;
+    margin: 0 0.3% -1.9%;
+  }
+  .content-details h3 {
+    font-size: small;
+  }
+  .content-text1 {
+    margin-top: -20%;
+  }
+  .content-text2 {
+    margin-bottom: -20%;
+  }
+}
+@media screen and (max-width: 540px) {
+  .container {
+    width: 15%;
+    margin: 0 0.9% -0.9% 0;
+  }
+  .row {
+    margin: -3.1%;
+  }
+  .content-details h3 {
+    font-size: small;
+  }
+  .content-text1 {
+    margin-top: -25%;
+  }
+  .content-text2 {
+    margin-bottom: -23%;
+  }
 }
